[project]
name = "klien_bottle_builder"
version = "0.0.1"
authors = [
  { name="Allen Polak", email="4852396+PolakAllen@users.noreply.github.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/PolakAllen/klein-bottle/klien_bottle_builder"